# notable-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/notable_mcp/: __init__.py  client.py  safety.py  server.py  simulator.py  state.py
src/notable_mcp/tools/: config.py  control.py  diagnostics.py  liquid.py  modules.py  protocol.py  status.py
tests/: test_simulation_e2e.py
