[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notable-mcp"
version = "0.1.0"
description = "MCP Server for NOTABLE liquid handler by ABLE Labs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ABLE Labs", email = "dev@ablelabs.co.kr" }]
keywords = ["mcp", "liquid-handler", "notable", "lab-automation", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
notable-mcp = "notable_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notable_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
